# search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  build.ps1  build_in_Linux.sh  config.json  main.cpp  requests.json
include/: additional.h  constants.h  converterJSON.h  generator.h  invertedIndex.h  searchServer.h  structures.h  tests.h
src/: CMakeLists.txt  main.cpp  tests.cpp
